feat: adds better-auth to auth users
